<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="-43dp">

        <ImageView
            android:id="@+id/itemImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:adjustViewBounds="true"
            android:maxWidth="400dp" />

        <TextView
            android:id="@+id/itemTitle"
            style="@android:style/Widget.TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/itemImage"
            android:layout_marginStart="8dp"
            android:padding="8dp"
            android:text="@string/leiras" />

        <RatingBar
            android:id="@+id/ratingBar"
            style="@style/Widget.AppCompat.RatingBar.Small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/itemTitle"
            android:layout_marginStart="8dp"
            android:isIndicator="true"
            android:numStars="5"
            android:text="@string/cuccok" />

        <TextView
            android:id="@+id/subTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/ratingBar"
            android:padding="8dp"
            android:text="@string/info" />

        <TextView
            android:id="@+id/price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/subTitle"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="12dp"
            android:padding="8dp"
            android:textColor="@color/green" />

        <Button
            android:id="@+id/remove_from_cart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/price"
            android:layout_alignParentStart="false"
            android:layout_alignParentTop="false"
            android:layout_alignParentEnd="false"
            android:layout_marginStart="97dp"
            android:layout_marginTop="109dp"
            android:layout_marginEnd="79dp"
            android:text="@string/remove_from_cart" />

        <Button
            android:id="@+id/negative"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/price"
            android:layout_alignParentStart="false"
            android:layout_alignParentTop="false"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="97dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="75dp"
            android:text="@string/negative" />

        <Button
            android:id="@+id/positive"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/price"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="false"
            android:layout_alignParentEnd="false"
            android:layout_marginStart="75dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="25dp"
            android:text="@string/positive" />

        <TextView
            android:id="@+id/amount"
            android:layout_width="wrap_content"
            android:layout_height="3dp"
            android:layout_above="@+id/remove_from_cart"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="205dp"
            android:layout_marginEnd="206dp"
            android:layout_marginBottom="-50dp"
            android:padding="8dp"
            android:textColor="@color/green" />


    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>