<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".registration"
    tools:ignore="ExtraText">


    <TextView
        android:id="@+id/textView"
        android:layout_width="405dp"
        android:layout_height="36dp"
        android:text="Regisztráció"
        android:textAlignment="center"

        android:textSize="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.023"
        tools:ignore="MissingConstraints" />


    <EditText
        android:id="@+id/editEmailAdd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:ems="10"
        android:hint="E-mail cím"
        android:inputType="textEmailAddress"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:layout_editor_absoluteX="3dp" />

    <EditText
        android:id="@+id/editPass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="Jelszó"
        android:inputType="textPassword"
        app:layout_constraintTop_toBottomOf="@+id/editUsername"
        tools:layout_editor_absoluteX="-2dp" />

    <EditText
        android:id="@+id/editPassAgain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="Jelszó újra"
        android:inputType="textPassword"
        app:layout_constraintTop_toBottomOf="@+id/editPass"
        tools:layout_editor_absoluteX="-3dp" />

    <Button
        android:id="@+id/buttonreg"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:onClick="regsend"
        android:text="@string/reg"
        app:layout_constraintTop_toBottomOf="@+id/spinner"
        tools:layout_editor_absoluteX="-16dp" />

    <Button
        android:id="@+id/buttonLog"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:onClick="login"
        android:text="Bejelentkezés"
        app:layout_constraintTop_toBottomOf="@+id/buttonreg"
        tools:layout_editor_absoluteX="-3dp" />

    <RadioGroup
        android:id="@+id/radiogrouptype"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editAddress">

        <RadioButton
            android:id="@+id/vasarlobutton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/vasarlo"
            app:layout_constraintTop_toBottomOf="@+id/eladobutton"
            tools:layout_editor_absoluteX="0dp" />

        <RadioButton
            android:id="@+id/eladobutton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/elado"
            app:layout_constraintTop_toBottomOf="@+id/editAddress"
            tools:layout_editor_absoluteX="0dp" />


    </RadioGroup>

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/radiogrouptype"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="-1dp" />

    <EditText
        android:id="@+id/editUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="Felasználónév"
        android:inputType="text"
        app:layout_constraintTop_toBottomOf="@+id/editEmailAdd"
        tools:layout_editor_absoluteX="0dp" />

    <EditText
        android:id="@+id/editAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/address"
        android:inputType="text"
        app:layout_constraintTop_toBottomOf="@+id/editPassAgain"
        tools:layout_editor_absoluteX="3dp" />

    <Button
        android:id="@+id/button3"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:onClick="loginasquest"
        android:text="@string/loginasquest"
        app:layout_constraintTop_toBottomOf="@+id/buttonLog"
        tools:ignore="OnClick"
        tools:layout_editor_absoluteX="16dp" />


</androidx.constraintlayout.widget.ConstraintLayout>